Added start/end date validation to controllers