@@ -1,4 +1,3 @@
 #!/usr/bin/env bash
 
-SBT_OPTS="-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xmx2G"
 sbt test
